--- a/charts/neo4j/templates/serviceaccount.yaml
+++ b/charts/neo4j/templates/serviceaccount.yaml
@@ -2,9 +2,9 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: {{ include "nginx.serviceAccountName" . }}
+  name: {{ include "neo4j.serviceAccountName" . }}
   labels:
-    {{- include "nginx.labels" . | nindent 4 }}
+    {{- include "neo4j.labels" . | nindent 4 }}
   {{- with .Values.serviceAccount.annotations }}
   annotations:
     {{- toYaml . | nindent 4 }}
