--- a/charts/neo4j/templates/tests/test-connection.yaml
+++ b/charts/neo4j/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "nginx.fullname" . }}-test-connection"
+  name: "{{ include "neo4j.fullname" . }}-test-connection"
   labels:
-    {{- include "nginx.labels" . | nindent 4 }}
+    {{- include "neo4j.labels" . | nindent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args: ['{{ include "nginx.fullname" . }}:{{ .Values.service.port }}']
+      args: ['{{ include "neo4j.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
