--- a/charts/neo4j/values.yaml
+++ b/charts/neo4j/values.yaml
@@ -1,11 +1,11 @@
-# Default values for nginx.
+# Default values for neo4j.
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
 replicaCount: 1
 
 image:
-  repository: nginx
+  repository: neo4j:4.0
   pullPolicy: IfNotPresent
 
 imagePullSecrets: []
@@ -19,7 +19,7 @@ serviceAccount:
   annotations: {}
   # The name of the service account to use.
   # If not set and create is true, a name is generated using the fullname template
-  name:
+  name: ingress-sa
 
 podSecurityContext: {}
   # fsGroup: 2000
@@ -34,16 +34,16 @@ securityContext: {}
 
 service:
   type: ClusterIP
-  port: 80
+  port: 7474
 
 ingress:
   enabled: true
-  annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
+  annotations:
+    kubernetes.io/ingress.class: nginx
+    kubernetes.io/tls-acme: "true"
   hosts:
-    - host: raff-dev.com
-      paths: ["/"]
+    - host: chart-example.local
+      paths: ["/testPath"]
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
